--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           name: Install packages
           command: |
             python3 -m venv env
-            .\env\Scripts\activate
+            .\env\bin\activate
             pip install -r requirements.txt
       - run:
           name: tests
