--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
             python3 -m venv env
             . env/bin/activate
             pip install -r requirements.txt
+            pip install pytest
       - run:
           name: tests
           command: pytest
