--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,11 +29,16 @@ jobs:
             python3 -m venv env
             . env/bin/activate
             pip install -r requirements.txt
+      - save_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          paths:
+            - "env"
+
       - run:
-          name: tests
+          name: pytests
           command: |
             . env/bin/activate
-            pytest
+            python3 manage.py test
       - run:
           name: linting
           command: |
