--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,12 +57,11 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-
+      
       - run:
           name: Package app and push to DockerHub
           command: |
-            echo $DOCKER_PASSWORD
-            docker login -u $DOCKER_USERNAME --password-stdin
+            echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
             docker build -t $DOCKER_USERNAME/oc_lettings:$CIRCLE_SHA1 .
             docker push $DOCKER_USERNAME/oc_lettings:$CIRCLE_SHA1
 
